--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "main": "background.js",
   "dependencies": {
     "axios": "^0.23.0",
+    "better-sqlite3": "^7.4.4",
     "core-js": "^3.6.5",
+    "esm": "^3.2.25",
+    "kafkajs": "^1.15.0",
+    "sequelize": "^6.8.0",
+    "sqlite3": "^5.0.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
