--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^3.0.0",
-    "vuetify": "^2.5.10"
+    "vue-router": "^4.0.0-0",
+    "vuetify": "^2.5.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
