--- a/package.json
+++ b/package.json
@@ -15,29 +15,35 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "axios": "^0.23.0",
-    "better-sqlite3": "^7.4.4",
     "core-js": "^3.6.5",
     "esm": "^3.2.25",
     "kafkajs": "^1.15.0",
+    "roboto-fontface": "*",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuetify": "^2.5.10",
-    "vuex": "^3.6.2"
+    "vuetify": "^3.0.0-alpha.0",
+    "vuex": "^3.6.2",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "~5.0.0-beta.3",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "electron": "^15.3.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "vue-cli-plugin-electron-builder": "~2.1.1"
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
+    "vue-cli-plugin-vuetify": "~2.4.3",
+    "vuetify-loader": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
