--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "kafkajs": "^1.15.0",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
-    "vue": "^3.0.0"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,8 +35,12 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
