--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
