--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -15,10 +15,16 @@
   },
   "main": "background.js",
   "dependencies": {
+    "aws-sdk": "^2.1018.0",
     "axios": "^0.23.0",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
+    "express": "^4.17.1",
     "kafkajs": "^1.15.0",
+    "morgan": "^1.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
@@ -33,7 +39,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "electron": "^15.3.0",
+    "electron-builder": "^22.13.1",
     "electron-devtools-installer": "^3.1.0",
+    "electron-rebuild": "^3.2.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "sass": "~1.32.0",
