--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
-    "esm": "^3.2.25",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "morgan": "^1.10.0",
+    "nedb": "^1.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
@@ -44,6 +44,7 @@
     "electron-rebuild": "^3.2.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "esm": "^3.2.25",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-electron-builder": "~2.1.1",
