--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -24,7 +24,9 @@
     "kafkajs": "^1.15.0",
     "morgan": "^1.10.0",
     "nedb": "^1.8.0",
+    "node-uuid": "^1.4.8",
     "pg-hstore": "^2.3.4",
+    "pouchdb": "^7.2.2",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
