--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "nedb": "^1.8.0",
+    "node-uuid": "^1.4.8",
     "pg-hstore": "^2.3.4",
+    "pouchdb": "^7.2.2",
+    "pouchdb-browser": "^7.2.2",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
