--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg-hstore": "^2.3.4",
     "pouchdb": "^7.2.2",
     "pouchdb-browser": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "sequelize": "^6.8.0",
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
