--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dirty": "^1.1.3",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "moment": "^2.29.1",
