--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dirty": "^1.1.3",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
+    "lokijs": "^1.5.12",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "nedb": "^1.8.0",
