UHOOOOO DB Finally Working

--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -15,24 +15,21 @@
   },
   "main": "background.js",
   "dependencies": {
-    "aws-sdk": "^2.1018.0",
-    "axios": "^0.23.0",
-    "cookie-parser": "^1.4.5",
     "core-js": "^3.6.5",
-    "cors": "^2.8.5",
+    "dexie": "^3.0.3",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
+    "leveldown": "^6.1.0",
+    "lokijs": "^1.5.12",
+    "memdown": "^6.1.1",
     "moment": "^2.29.1",
-    "morgan": "^1.10.0",
-    "nedb": "^1.8.0",
-    "node-uuid": "^1.4.8",
-    "pg-hstore": "^2.3.4",
-    "pouchdb": "^7.2.2",
-    "pouchdb-browser": "^7.2.2",
-    "pouchdb-find": "^7.2.2",
-    "pouchdb-node": "^7.2.2",
-    "sequelize": "^6.8.0",
-    "sqlite3": "^5.0.2",
+    "nedb-promises": "^5.0.1",
+    "pouchdb-adapter-idb": "^7.2.2",
+    "pouchdb-adapter-indexeddb": "^7.2.2",
+    "pouchdb-adapter-leveldb": "^7.2.2",
+    "pouchdb-adapter-memory": "^7.2.2",
+    "rxdb": "^10.3.2",
+    "rxjs": "^7.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
