--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -15,6 +15,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
     "dexie": "^3.0.3",
     "express": "^4.17.1",
