Config page WIP!

--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -15,22 +15,14 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
-    "dexie": "^3.0.3",
-    "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "leveldown": "^6.1.0",
-    "lokijs": "^1.5.12",
     "memdown": "^6.1.1",
     "moment": "^2.29.1",
     "nedb-promises": "^5.0.1",
-    "pouchdb-adapter-idb": "^7.2.2",
-    "pouchdb-adapter-indexeddb": "^7.2.2",
-    "pouchdb-adapter-leveldb": "^7.2.2",
-    "pouchdb-adapter-memory": "^7.2.2",
-    "rxdb": "^10.3.2",
-    "rxjs": "^7.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
