Added  ICON :wow:

--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -69,5 +69,8 @@
     "not dead"
   ],
   "_id": "kafka-explorer@0.1.0",
-  "readme": "ERROR: No README data found!"
+  "readme": "README.md",
+  "build": {
+    "appId": "in.wglabz.kafkaexplorer"
+  }
 }
