--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.1",
     "nedb-promises": "^5.0.1",
     "vue": "^2.6.11",
+    "vue-json-viewer": "^2.2.20",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
