Message popup supports XML!

--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@ant-design/icons": "^4.7.0",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
+    "fast-xml-parser": "^4.0.0-beta.2",
     "kafkajs": "^1.15.0",
     "leveldown": "^6.1.0",
     "memdown": "^6.1.1",
     "moment": "^2.29.1",
     "nedb-promises": "^5.0.1",
+    "pretty-data": "^0.40.0",
+    "simple-syntax-highlighter": "^1.5.0",
     "vue": "^2.6.11",
+    "vue-code-highlight": "^0.7.8",
     "vue-json-viewer": "^2.2.20",
     "vue-router": "^3.5.3",
     "vuetify": "^2.4.0",
