Logs piped to UI

--- a/dist_electron/package.json
+++ b/dist_electron/package.json
@@ -18,7 +18,10 @@
     "@ant-design/icons": "^4.7.0",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
+    "fast-folder-size": "^1.6.1",
     "fast-xml-parser": "^4.0.0-beta.2",
+    "get-folder-size": "^3.1.0",
+    "kafka-streams": "^5.0.0",
     "kafkajs": "^1.15.0",
     "leveldown": "^6.1.0",
     "memdown": "^6.1.1",
